Responsive layout + spacing fixed

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ button:hover {
   }
 
   input {
-    width: 200px;
+    width: 600px;
     margin: 0 5px;
   }
 }
